# aln

./: CMakeLists.txt  README  genseq.py  sw_f32.cl  sw_i32.cl  sw_no_path.cl
src/: CMakeLists.txt  alignment.cpp  alignment.hpp  aln.cpp  alnconf.cpp  avx2_sw.cpp  avx2_sw.hpp  avx2_swi.cpp  avx2_swi.hpp  backtrack.cpp  backtrack.hpp  batch.cpp  batch.hpp  buffer.cpp  buffer.hpp  cpudispatcher.cpp  cpudispatcher.hpp  fastareader.cpp  fastareader.hpp  helper.cpp  helper.hpp  matrix.hpp  ocldispatcher.hpp  printer.hpp  sequence.hpp  sequencebuffer.cpp  sequencebuffer.hpp  sw.cpp  sw.hpp
